fixed asset links and tweaked layout

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -205,6 +205,20 @@ hr {
 
 
 /* ------------------------------------------- */
+/* CUSTOM */
+/* ------------------------------------------- */
+
+.link__logo {
+  margin-left: 3px;
+}
+
+#freecodecamp img {
+  width: 30%;
+}
+
+
+
+/* ------------------------------------------- */
 /* NAVBAR */
 /* ------------------------------------------- */
 
