--- a/website/src/components/NavCard/styles.module.css
+++ b/website/src/components/NavCard/styles.module.css
@@ -1,12 +1,13 @@
 .card {
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   width: 30%;
   padding: 0 3%;
-  background-color: #fff;
+  border-radius: 10px;
   box-shadow: none;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease;
   margin: 2%;
   text-align: center;
   position: relative;
@@ -18,8 +19,10 @@
 }
 
 svg.card__icon {
+  position: relative;
+  z-index: 1;
   width: 22%;
-  color: #6B6EF9;
+  transition: all 0.5s ease;
 }
 
 .level {
@@ -29,9 +32,11 @@ svg.card__icon {
   margin: 7% -5% 0 auto;
 }
 
-.level > div {
+
+
+/* .level > div {
   height: 2px;
   width: 24%;
   margin: 0 4%;
   background-color: green;
-}
+} */
