--- a/website/src/components/CardsContainers/styles.module.css
+++ b/website/src/components/CardsContainers/styles.module.css
@@ -1,12 +1,13 @@
 .cards__container {
   display: flex;
   flex-direction: row;
+  max-width: 1440px;
 }
 
-.card__div {
+/* .card__div {
 
 }
 
 .card.developer:hover {}
 
-.card.founder:hover {}
+.card.founder:hover {} */
