--- a/website/src/components/NavCard/styles.module.css
+++ b/website/src/components/NavCard/styles.module.css
@@ -3,26 +3,33 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  width: 30%;
-  padding: 0 3%;
   border-radius: 10px;
   box-shadow: none;
   transition: all 0.5s ease;
-  margin: 2%;
-  text-align: center;
-  position: relative;
+  margin: 1.5vw;
 }
+
+/* tablet */
+/* @media screen and (max-width: 834px) {
+
+  .card.profile {
+    width: 
+  }
+} */
 
 .card a {
   text-decoration: none;
   color: #111;
+  display: inline-block;
+  width: 100%;
 }
 
 svg.card__icon {
   position: relative;
   z-index: 1;
-  width: 22%;
+  width: 4vw;
   transition: all 0.5s ease;
+  display: inline-block;
 }
 
 .level {
