--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -467,7 +467,29 @@ html {
 /* max screen sizes */
 
 @media screen and (min-width: 1440px) {
+
+  .header h1 {
+    font-size: 72px;
+  }
+
+  .subheader p {
+    font-size: 24px;
+  }
+
+  .header__links a {
+    font-size: 16px;
+  }
   
+  .landing__section h2 {
+    font-size: 55px;
+    margin-bottom: 32px;
+  }
+
+  .card {
+    padding: 40px;
+    margin: 22px;
+  }
+
   .card-title {
     font-size: 32px;
     margin-bottom: 14px;
